<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout_bids"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary">

        <TextView
            android:id="@+id/textView_bids_amount_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/amount"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_bids_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/bids"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_bids"
        android:layout_width="match_parent"
        android:layout_height="225dp"
        android:background="@drawable/border" />

    <LinearLayout

        android:id="@+id/linearLayout_asks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#2d1ed4">

        <TextView
            android:id="@+id/textView_asks_amount_label"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="1"

            android:gravity="center"
            android:text="@string/amount"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView_asks_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"

            android:gravity="center"
            android:text="@string/asks"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_asks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border" />

</LinearLayout>

